# leptos-heavy-metal-stack

./: .gitignore  Cargo.toml  Dockerfile  README.md  Todos.db  fly.toml  index.html  rust-toolchain.toml  tailwind.config.js  vscode.settings.json
src/: app.rs  lib.rs  main.rs  todo.rs
src/components/: live_reload.rs  mod.rs
src/routes/: todo.rs
src/server/: generated.rs
static/styles/: output.css
