[package]
name = "leptos-heavy-metal-stack"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.66"
console_log = "0.2.0"
console_error_panic_hook = "0.1.7"
futures = "0.3.25"
cfg-if = "1.0.0"
leptos = { git = "https://github.com/benwis/leptos", branch="axum-0.6", default-features = false, features = [
	"serde",
] }
leptos_axum = { git = "https://github.com/benwis/leptos", branch="axum-0.6", default-features = false, optional = true }
leptos_meta = { git = "https://github.com/benwis/leptos", branch="axum-0.6", default-features = false }
leptos_router = { git = "https://github.com/benwis/leptos", branch="axum-0.6", default-features = false }
log = "0.4.17"
simple_logger = "4.0.0"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
gloo-net = { version = "0.2.5", features = ["http"] }
reqwest = { version = "0.11.13", features = ["json"] }
axum = { version = "0.6.1", optional = true }
tower = { version = "0.4.13", optional = true }
tower-http = { version = "0.3.4", features = ["fs"], optional = true }
tokio = { version = "1.22.0", features = ["full"], optional = true }
http = { version = "0.2.8", optional = true }
sqlx = { version = "0.6.2", features = [
	"runtime-tokio-rustls",
	"sqlite",
], optional = true }

[features]
default = ["csr"]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
	"dep:axum",
	"dep:tower",
	"dep:tower-http",
	"dep:tokio",
	"dep:http",
	"dep:sqlx",
	"leptos/ssr",
	"leptos_meta/ssr",
	"leptos_router/ssr",
	"leptos_axum",
]

[package.metadata.cargo-all-features]
denylist = [
	"axum",
	"tower",
	"tower-http",
	"tokio",
	"http",
	"sqlx",
	"leptos_axum",
]
skip_feature_sets = [["csr", "ssr"], ["csr", "hydrate"], ["ssr", "hydrate"]]

[package.metadata.leptos]
# Path, relative to root, to generate rust code to
gen_file = "src/server/generated.rs"
# Path to the source index.html file
index_file = "index.html"
# [Optional] Files in the asset_dir will be copied to the target/site directory
assets_dir = "assets"
# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
end2end_test_cmd = "npx playwright test"
# On which port to serve the client side rendered site (when using --csr option)
csr_port = 3000
# The port to use for automatic reload monitoring
reload_port = 3001

[package.metadata.leptos.style]
# Main style file. If scss or sass then it will be compiled to css.
# the parent folder will be watched for changes
file = "static/styles/output.css"
# A https://browsersl.ist query
browserquery = "defaults"